--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 	</head>
 	<body>
-	   Hi! WORD OF THE DAT
-	</body
+		<h1>this is our shared code</h1>
+	   Hi! WORD OF THE DAY
+	</body>
 </html>
