Added the Header

--- a/index.html
+++ b/index.html
@@ -1,9 +1,64 @@
+
+
 <html>
 	<head>
 	</head>
-	<body>
-		<h1>this is our shared code</h1>
-	   Hi! WORD OF THE DAY
-	   <button> Word </button>
+	<body> <!---Should I put a box around the title?-->
+		<h1> Programming Word Of The Day</h1>
+	 
 	</body>
+	<div>
+		<h3> Tech - Fun - New</h3>
+		<h3>Bord at an hour meeting that should have taken 10 minutes</h3>
+		<h4>Come to the Programming Word of the day and it may look like you are doing somthing</h4>
+	</div>
+<!--Do I need to use a body within the H tags? -->
+</div>
+<button>
+</div> <body> <h4> 
+		Calendar
+	</h4></body></h>
+</button>
+</div>
+
+</div>
+<button>
+</div> <body> <h4> 
+		About
+	</h4></body></h>
+</button>
+</div>
+
+</div>
+<button>
+</div> <body> <h4> 
+		Contact
+	</h4></body></h>
+</button>
+</div>
+
+</div>
+<button>
+</div> <body> <h4> 
+		Questions
+	</h4></body></h>
+</button>
+</div>
+
+</div>
+<button>
+</div> <body> <h4> 
+		Stack Overflow
+	</h4></body></h>
+</button>
+</div>
+	<!--- Nick Build pages and links for the buttons-->
+<!-- link to SO foro fun -->
+<div>
+<a href= "https://stackoverflow.com/search?q=word+of+the+day+&mixed=0">
+	SO Sample :)</a>
+</div>
+	
+	
 </html>
+
