--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
 	<head>
+	  <link rel="stylesheet" type="text/css" href="bootstrap.css">
 	</head>
 	<body> <!---Should I put a box around the title?-->
 		<h1> Programming Word Of The Day</h1>
